修改了文件

--- a/application.yml
+++ b/application.yml
@@ -9,7 +9,7 @@ spring:
       name: microservercloud-config-wolfcode-dev
 ---
 spring:
-  profiles: test  #开发环境
+  profiles: test  #测试环境
     application:
       name: microservercloud-config-wolfcode-test
 # 必须保存为UTF-8的格式
